src/test/ui/issues/issue-60057.stderr
error[E0425]: cannot find value `banana` in this scope
  --> $DIR/issue-60057.rs:8:13
   |
LL |             banana
   |             ^^^^^^ a field by this name exists in `Self`

error[E0425]: cannot find value `banana` in this scope
  --> $DIR/issue-60057.rs:14:13
   |
LL |             banana
   |             ^^^^^^ help: you might have meant to use the available field: `self.banana`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
